--- a/codesnaps/desktop.ini
+++ b/codesnaps/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Screenshot 2025-08-09 221934.png=@Screenshot 2025-08-09 221934,0
 Screenshot 2025-08-10 165223.png=@Screenshot 2025-08-10 165223,0
+Screenshot 2025-08-11 080919.png=@Screenshot 2025-08-11 080919,0
